# napari-J

./: LICENSE  README.md  Untitled.ipynb  environment.yml  naparij.yml  naparij_default.yml  setup.cfg  setup.py  tox.ini
.github/workflows/: test_and_deploy.yml
docs/: conf.py  index.rst
fiji_scripts/: image_in_new_viewer.py  make_screenshot.py  open_empty_napari.py  points_to_napari.py  replace_image.py
ijpb/: func.py
ijpb/fiji/: IPythonProxy.py
napari_j/: _dock_widget.py  bridge.py  config.py  connection.py  image.py  napari.yaml  points.py  surfaces.py
napari_j/_tests/: bridge_unit_test.py  test_dock_widget.py
