[metadata]
name = napari-J
author = Volker Baecker
author_email = volker.baecker@mri.cnrs.fr
license = MIT
url = https://github.com/MontpellierRessourcesImagerie/napari-J
description = A plugin to exchange data with FIJI and to use FIJI image analysis from napari
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
	Development Status :: 2 - Pre-Alpha
	Intended Audience :: Developers
	Framework :: napari
	Topic :: Software Development :: Testing
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Operating System :: OS Independent
	License :: OSI Approved :: MIT License
project_urls = 
	Bug Tracker = https://github.com/MontpellierRessourcesImagerie/napari-J/issues
	Documentation = https://github.com/MontpellierRessourcesImagerie/napari-J#README.md
	Source Code = https://github.com/MontpellierRessourcesImagerie/napari-J
	User Support = https://github.com/MontpellierRessourcesImagerie/napari-J/issues

[options]
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
# add your package requirements here
install_requires = 
	napari-plugin-engine>=0.1.4
	numpy
	matplotlib
	python-matplotlib-qt5
	JPype1
	imageio_ffmpeg
include_package_data = True

[options.extras_require]
testing = 
	matplotlib
	imageio_ffmpeg
	python-matplotlib-qt5
	
[options.entry_points]
napari.manifest = 
	napari-J = napari_j:napari.yaml

[options.packages.find]
exclude = 
	ijpb
	ijpb.*

[options.package_data]
napari_j = napari.yaml

